change web title

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,3 +25,15 @@
     top: 24px;
     z-index: 10;
 }
+
+.my_name {
+    font-family: "poppins";  // Font you like
+    font-size: 2rem;         // Size you like
+    color: black;            // Color you like
+}
+
+.my_pro {
+    font-family: "Consolas"; // Font you like
+    font-size: 1rem;         // Size you like
+    color: gray;             // Color you like
+}
