--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -27,13 +27,13 @@
 }
 
 .my_name {
-    font-family: "poppins";  // Font you like
+    font-family: "poppins-semibold, poppins, sans-serif";  // Font you like
     font-size: 2rem;         // Size you like
     color: black;            // Color you like
 }
 
 .my_pro {
-    font-family: "Consolas"; // Font you like
-    font-size: 1rem;         // Size you like
+    font-family:"Consolas, avenir, avenir-lt-w05_35-light, sans-serit"; // Font you like
+    font-size: 1.3rem;         // Size you like
     color: gray;             // Color you like
 }
